# baseball-data

./: .dockerignore  .gitignore  CLEANUP_LOG.md  Dockerfile  MLOPS_GUIDE.md  ORGANIZATION.md  QUICKREF.py  README.md  USE_CASES.md  api.py  main.py  mlflow_tracker.py  pyproject.toml  requirements.txt
.github/workflows/: train.yml
archive/: example_data_format.py  fetch_statsapi.py  generate_sample_data.py  scrape_baseball_ref.py  scrape_yahoo.py  train.py  warehouse_model.py  yahoo_sample_Aug16.html
docs/: DATA_GUIDE.md  GAMETYPE.json  OUTCOME_MODEL_SUMMARY.md  PROJECT_NEXT_STEPS.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  SCRAPER_SUMMARY.md  USE_CASES.md
duckdb_poc/: README_DUCKDB.md  duckdb_config.py  duckdb_data_loader.py  duckdb_model_store.py  duckdb_predict.py  duckdb_setup.py
ingestion/: README.md  data_loader.py  features.py
models/: README.md
snowflake_poc/: .env.example  README_SNOWFLAKE.md  requirements.txt  snowflake_config.py  snowflake_data_loader.py  snowflake_model_store.py  snowflake_predict.py  snowflake_setup.py
src/: README.md  __init__.py  eda.py  predict.py  scraper.py  train_model.py
