[project]
name = "baseball-data"
version = "0.1.0"
description = "game prediction model"
authors = [
    {name = "matthewhatch",email = "mhatch73@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "requests>=2.31.0",
    "bs4 (>=0.0.2,<0.0.3)",
    "tqdm (>=4.67.2,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
