[project]
name = "baseball-data"
version = "0.1.0"
description = "ML pipeline for predicting MLB game outcomes"
authors = [
    {name = "matthewhatch", email = "mhatch73@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "scikit-learn>=1.2.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "duckdb>=0.9.0",
    "mlflow>=2.8.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.60.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
